Minor change in schemas and template.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
@@ -20,6 +20,8 @@ policy-map type copp copp-system-policy
    class copp-system-cvx
       shape pps 2000
       bandwidth pps 2000
+   !
+   class copp-system-aaa
 !
 policy-map type pbr PM_PBR_BREAKOUT
    class CM_PBR_EXCLUDE
