--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7924,7 +7924,7 @@ keys:
                   - str
                 rate_unit:
                   type: str
-                  description: '`rate_unit` must be defined for `shape` and `bandwidth`.'
+                  description: The `rate_unit` must be defined for `shape` and `bandwidth`.
                   valid_values:
                   - pps
                   - kbps
