--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -22,6 +22,7 @@ cv_pathfinder_regions:
     sites:
       - name: Site511
         id: 511
+        location: Miami
 
 bgp_peer_groups:
   wan_overlay_peers:
