Fix(eos_cli_config_gen): Fix the schema and template for action in event-handler

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -19,7 +19,10 @@ event-handler CONFIG_VERSIONING
 !
 event-handler trigger-on-boot
    trigger on-boot
-   action bash echo "on-boot"
+   action bash
+      echo "shivani\n"
+      hello
+      EOF
 !
 event-handler trigger-on-counters
    trigger on-counters
