Removing extra host.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-layer1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-layer1.cfg
@@ -3,6 +3,7 @@
 transceiver qsfp default-mode 4x10G
 !
 monitor layer1
+   logging transceiver
    logging transceiver dom
    logging transceiver communication
    logging mac fault
