--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3726,6 +3726,7 @@ keys:
               - qos dual-rate-policer
               - route
               - routed-port
+              - segment-security
               - subinterface
               - tapagg
               - traffic-class
