--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
@@ -27,7 +27,7 @@ management security
       maximum repetitive 6
       maximum sequential 7
    session shared-secret profile profile0
-      secret Secret1 7 $1c$mNvaIXPetcQ3hy7oUnTU3w== receive-lifetime 12/20/2024 10:00:00 12/20/2025 10:00:00 transmit-lifetime infinite
+      secret Secret1 7 $1c$mNvaIXPetcQ3hy7oUnTU3w== receive-lifetime 12/20/2024 10:00:00 12/20/2025 10:00:00 transmit-lifetime infinite local-time
       secret Secret2 7 $1c$mNvaIXPetcSA2UnFwIaxwA== receive-lifetime infinite transmit-lifetime infinite
    session shared-secret profile profile1
       secret Secret3 8a $Ra3am9YZlbg5d65txucxTg==$DMoPxa9Wu5elK39pofFgaw==$zgEBfv+w/AIr1FnW receive-lifetime 2024-12-20 10:00:00 2025-12-20 10:00:00 transmit-lifetime 12/20/2024 10:00:00 12/10/2025 10:00:00
