Fixed marker configuration.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard-policy.cfg
@@ -15,7 +15,7 @@ interface Management1
 monitor telemetry postcard policy
    no disabled
    ingress sample rate 16384
-   marker vxlan header word 0 bit 0
+   marker vxlan
    ingress collection gre source 10.3.3.3 destination 10.3.3.4 version 2
    !
    sample policy samplepo1
