Feat(eos_cli_config_gen): Add transceiver.frequency under ethernet_interfaces (#4003)

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -2867,6 +2867,18 @@ keys:
         transceiver:
           type: dict
           keys:
+            frequency:
+              type: str
+              convert_types:
+              - int
+              - float
+              description: Transceiver Laser Frequency in GHz (min 190000, max 200000).
+            frequency_unit:
+              type: str
+              required: false
+              valid_values:
+              - ghz
+              description: Unit of Transceiver Laser Frequency.
             media:
               type: dict
               keys:
