--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
@@ -996,6 +996,17 @@ keys:
         transceiver:
           type: dict
           keys:
+            frequency:
+              type: str
+              convert_types:
+                - int
+                - float
+              description: Transceiver Laser Frequency in GHz (min 190000, max 200000).
+            frequency_unit:
+              type: str
+              required: false
+              valid_values: ["ghz"]
+              description: Unit of Transceiver Laser Frequency.
             media:
               type: dict
               keys:
