--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -649,6 +649,19 @@ interface Ethernet66
    vrrp 3 ipv4 100.64.0.1
    vrrp 3 ipv4 version 3
 !
+interface Ethernet67
+   description Custom_Transceiver_Frequency
+   no shutdown
+   switchport
+   transceiver frequency 190050.000
+!
+interface Ethernet68
+   description Custom_Transceiver_Frequency
+   no shutdown
+   switchport
+   transceiver media override 100gbase-ar4
+   transceiver frequency 190080.000 ghz
+!
 interface Ethernet69
    description IP NAT service-profile
    switchport
