--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10582,7 +10582,7 @@ keys:
                   type: str
                   required: true
                   description: 'Note: Algorithm hmac-sha-256 requires EOS version
-                    4.31F and above.'
+                    4.31.1F and above.'
                   valid_values:
                   - aes-128-cmac-96
                   - hmac-sha-256
@@ -10793,6 +10793,8 @@ keys:
                 hash_algorithm:
                   type: str
                   required: true
+                  description: 'Note: Algorithm hmac-sha-256 requires EOS version
+                    4.31.1F and above.'
                   valid_values:
                   - aes-128-cmac-96
                   - hmac-sha-256
