Updating documentation template

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
@@ -38,11 +38,12 @@ keys:
             removed: false
             remove_in_version: 5.0.0
             new_key: event_handler_action
-        event_handler_action:
+        actions:
           type: dict
           keys:
             bash_command:
               type: str
+              description: Define BASH command action. Command could be multiline also.
             log:
               type: bool
               description: Log a message when the event is triggered.
