--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dhcp_servers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dhcp_servers.schema.yml
@@ -91,6 +91,7 @@ keys:
               keys:
                 ipv4_file:
                   type: list
+                  min_length: 1
                   description: List of IPv4 files
                   items:
                     type: str
