--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
@@ -8,14 +8,17 @@ dhcp server vrf AVRF
 dhcp server vrf defauls
 !
 dhcp server
-   dns server ipv4 1.1.1.1 8.8.8.8
-   dns server ipv6 2001:4860:4860::8888
+   dns server ipv4 10.0.0.1 192.168.255.254
+   dns server ipv6 2001:db8::1 2001:db8::2
    tftp server file ipv4 https://192.168.0.254/ztp/bootstrap https://www.arista.io/ztp/bootstrap
-   tftp server file ipv6 https://fd00::01/64/ztp/bootstrap
+   tftp server file ipv6 https://2001:0db8:fe/ztp/bootstrap
    !
    subnet 2a00:2::/64
    !
    subnet 10.2.3.0/24
+   !
+   vendor-option ipv4 NTP
+      sub-option 42 type ipv4-address data 10.1.1.1
 !
 dhcp server vrf defaulu
 !
