--- a/python-avd/pyproject.toml
+++ b/python-avd/pyproject.toml
@@ -31,7 +31,6 @@ requires = [
     "jsonschema>=4.10.3",
     "referencing>=0.35.0",
     "deepmerge>=1.1.0",
-    "md-toc>=8.1.8",
     "pyyaml>=6.0.0",
     "mkdocstrings[python]",
     "pydantic>=2.3.0",
@@ -56,7 +55,7 @@ exclude = ["vendor_overrides*"]
 [tool.setuptools.dynamic]
 version = {attr = "pyavd.__version__"}
 dependencies = {file = ["requirements.txt"]}
-optional-dependencies = {"mdtoc" = { file = ["requirements-mdtoc.txt"] }, "ansible" = { file = ["requirements-ansible-avd.txt"] } }
+optional-dependencies = {"ansible" = { file = ["requirements-ansible-avd.txt"] } }
 
 [tool.black]
 line-length = 160
