--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_layer1.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_layer1.schema.yml
@@ -29,4 +29,4 @@ keys:
             description: "Enable transceiver SMBus fail and reset logging."
           enabled:
             type: bool
-            description: Some platforms only support command `logging transceiver'. `enabled` key configures this command.
+            description: Some platforms support only the `logging transceiver` command. `enabled` key configures this command.
