--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3323,7 +3323,7 @@ keys:
             warning: true
             removed: false
             remove_in_version: 5.0.0
-            new_key: event_handler_action
+            new_key: event_handlers.actions
         action:
           type: str
           description: 'Command to execute.
@@ -3333,7 +3333,7 @@ keys:
             warning: true
             removed: false
             remove_in_version: 5.0.0
-            new_key: event_handler_action
+            new_key: event_handlers.actions
         actions:
           type: dict
           keys:
