--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
@@ -28,7 +28,7 @@ keys:
             warning: true
             removed: false
             remove_in_version: 5.0.0
-            new_key: event_handler_action
+            new_key: event_handlers.actions
         action:
           type: str
           description: |
@@ -37,7 +37,7 @@ keys:
             warning: true
             removed: false
             remove_in_version: 5.0.0
-            new_key: event_handler_action
+            new_key: event_handlers.actions
         actions:
           type: dict
           keys:
