Feat(eos_cli_config_gen): Add option for dot1x aaa accounting update interval <x> seconds

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -140,3 +140,9 @@ keys:
                     type: bool
               recovery_action_reauthenticate:
                 type: bool
+          accounting_update_interval:
+              type: int
+              convert_types:
+                - str
+              min: 5
+              max: 65535
