--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -1569,6 +1569,12 @@ keys:
                     type: bool
               recovery_action_reauthenticate:
                 type: bool
+          accounting_update_interval:
+            type: int
+            convert_types:
+            - str
+            min: 5
+            max: 65535
   dps_interfaces:
     type: list
     primary_key: name
