--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -29,6 +29,10 @@ ethernet_interfaces:
     bgp:
       session_tracker: ST1
     ip_verify_unicast_source_reachable_via: rx
+    tcp_mss_ceiling:
+      ipv4_segment_size: 70
+      ipv6_segment_size: 75
+      egress: true
     switchport:
       port_security:
         enabled: true
@@ -66,6 +70,9 @@ ethernet_interfaces:
     description: SRV-POD02_Eth1
     mode: trunk
     vlans: 110-111,210-211
+    tcp_mss_ceiling:
+      ipv4_segment_size: 70
+      ingress: true
     multicast:
       ipv4:
         static: true
@@ -128,6 +135,8 @@ ethernet_interfaces:
     priority_flow_control:
       enabled: false
     spanning_tree_guard: root
+    tcp_mss_ceiling:
+      ipv6_segment_size: 65
     switchport:
       port_security:
         mac_address_maximum:
@@ -155,6 +164,8 @@ ethernet_interfaces:
     priority_flow_control:
       enabled: true
     spanning_tree_guard: disabled
+    tcp_mss_ceiling:
+      ipv4_segment_size: 65
     multicast:
       ipv4:
         static: true
