--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -2284,6 +2284,32 @@ keys:
           keys:
             profile:
               type: str
+        tcp_mss_ceiling:
+          type: dict
+          description: 'The TCP MSS clamping feature involves clamping the maximum
+            segment size (MSS) in the TCP header
+
+            of TCP SYN packets if it exceeds the configured MSS ceiling limit for
+            the interface.'
+          keys:
+            ipv4_segment_size:
+              type: int
+              convert_types:
+              - str
+              min: 64
+              max: 65475
+            ipv6_segment_size:
+              type: int
+              convert_types:
+              - str
+              min: 64
+              max: 65475
+            egress:
+              type: bool
+              description: Enforce on packets forwarded to the network.
+            ingress:
+              type: bool
+              description: Enforce on packets arriving from the network.
         channel_group:
           type: dict
           keys:
