--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -141,8 +141,9 @@ keys:
               recovery_action_reauthenticate:
                 type: bool
           accounting_update_interval:
-              type: int
-              convert_types:
-                - str
-              min: 5
-              max: 65535
+            type: int
+            convert_types:
+              - str
+            min: 5
+            max: 65535
+            description: Interval period in seconds.
