--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,7 +128,7 @@ markdown_extensions:
 # TOC
 docs_dir: ansible_collections/arista/avd/
 nav:
-  - Home: README.md
+  - Home: index.md
   - Getting Started:
       - Introduction to Ansible and AVD: docs/getting-started/intro-to-ansible-and-avd.md
   - Examples:
