Feat(eos_cli_config_gen): Support logging transceiver in monitor layer1 (#3991)

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7111,6 +7111,10 @@ keys:
           communication:
             type: bool
             description: Enable transceiver SMBus fail and reset logging.
+          enabled:
+            type: bool
+            description: Some platforms support only the `logging transceiver` command.
+              `enabled` key configures this command.
   monitor_sessions:
     type: list
     convert_types:
