--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -363,61 +363,61 @@ interface Loopback0
 interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 104.129.194.39
+   tunnel destination 10.37.121.1
    tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 199.168.148.132
+   tunnel destination 10.39.77.1
    tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 165.225.72.39
+   tunnel destination 10.50.9.1
    tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
 !
 interface Tunnel110
    description Internet Exit ZSCALER-EXIT-POLICY-2 PRI
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 104.129.194.39
+   tunnel destination 10.37.121.1
    tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-2-PROFILE
 !
 interface Tunnel111
    description Internet Exit ZSCALER-EXIT-POLICY-2 SEC
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 199.168.148.132
+   tunnel destination 10.39.77.1
    tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-2-PROFILE
 !
 interface Tunnel112
    description Internet Exit ZSCALER-EXIT-POLICY-2 TER
    mtu 1394
-   ip address unnumbered Ethernet3
+   ip address unnumbered Loopback0
    ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 165.225.72.39
+   tunnel destination 10.50.9.1
    tunnel ipsec profile IE-ZSCALER-EXIT-POLICY-2-PROFILE
 !
 interface Vxlan1
@@ -485,42 +485,42 @@ monitor connectivity
       description
       Internet Exit ZSCALER-EXIT-POLICY-1 PRI
       local-interfaces SET-Tunnel100
-      ip 104.129.194.39
+      ip 10.37.121.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel101
       description
       Internet Exit ZSCALER-EXIT-POLICY-1 SEC
       local-interfaces SET-Tunnel101
-      ip 199.168.148.132
+      ip 10.39.77.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel102
       description
       Internet Exit ZSCALER-EXIT-POLICY-1 TER
       local-interfaces SET-Tunnel102
-      ip 165.225.72.39
+      ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel110
       description
       Internet Exit ZSCALER-EXIT-POLICY-2 PRI
       local-interfaces SET-Tunnel110
-      ip 104.129.194.39
+      ip 10.37.121.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel111
       description
       Internet Exit ZSCALER-EXIT-POLICY-2 SEC
       local-interfaces SET-Tunnel111
-      ip 199.168.148.132
+      ip 10.39.77.1
       url http://gateway.zscalerbeta.net/vpntest
    !
    host IE-Tunnel112
       description
       Internet Exit ZSCALER-EXIT-POLICY-2 TER
       local-interfaces SET-Tunnel112
-      ip 165.225.72.39
+      ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
 !
 ip access-list ALLOW-ALL
@@ -536,6 +536,10 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:511
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
+!
+ip route 10.37.121.1/32 Ethernet3 name IE-ZSCALER
+ip route 10.39.77.1/32 Ethernet3 name IE-ZSCALER
+ip route 10.50.9.1/32 Ethernet3 name IE-ZSCALER
 !
 ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
