--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -635,6 +635,16 @@ ip_nat:
       - access_list: ALLOW-ALL
         pool_name: PORT-ONLY-POOL
         nat_type: pool
+static_routes:
+- destination_address_prefix: 10.37.121.1/32
+  name: IE-ZSCALER
+  interface: Ethernet3
+- destination_address_prefix: 10.39.77.1/32
+  name: IE-ZSCALER
+  interface: Ethernet3
+- destination_address_prefix: 10.50.9.1/32
+  name: IE-ZSCALER
+  interface: Ethernet3
 router_service_insertion:
   enabled: true
   connections:
@@ -720,52 +730,52 @@ tunnel_interfaces:
 - name: Tunnel100
   description: Internet Exit ZSCALER-EXIT-POLICY-1 PRI
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
-  destination: 104.129.194.39
+  destination: 10.37.121.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel101
   description: Internet Exit ZSCALER-EXIT-POLICY-1 SEC
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
-  destination: 199.168.148.132
+  destination: 10.39.77.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel102
   description: Internet Exit ZSCALER-EXIT-POLICY-1 TER
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
-  destination: 165.225.72.39
+  destination: 10.50.9.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel110
   description: Internet Exit ZSCALER-EXIT-POLICY-2 PRI
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
-  destination: 104.129.194.39
+  destination: 10.37.121.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel111
   description: Internet Exit ZSCALER-EXIT-POLICY-2 SEC
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
-  destination: 199.168.148.132
+  destination: 10.39.77.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
   nat_profile: VRF-AWARE-NAT
 - name: Tunnel112
   description: Internet Exit ZSCALER-EXIT-POLICY-2 TER
   mtu: 1394
-  ip_address: unnumbered Ethernet3
+  ip_address: unnumbered Loopback0
   tunnel_mode: ipsec
   source_interface: Ethernet3
   destination: 10.50.9.1
@@ -828,8 +838,8 @@ metadata:
     internet_exit_policies:
     - name: ZSCALER-EXIT-POLICY-1
       type: zscaler
-      city: ''
-      country: ''
+      city: Santa Clara, CA
+      country: United States
       firewall: false
       ips_control: false
       acceptable_use_policy: false
@@ -846,8 +856,8 @@ metadata:
         preference: Alternate
     - name: ZSCALER-EXIT-POLICY-2
       type: zscaler
-      city: ''
-      country: ''
+      city: Santa Clara, CA
+      country: United States
       firewall: false
       ips_control: false
       acceptable_use_policy: false
