Fix: Address PR comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -468,9 +468,9 @@ ip prefix-list PL-STATIC-VRF-DEFAULT
 !
 ip route 172.16.0.0/16 172.16.5.4
 ip route 66.66.66.0/24 172.17.0.0
-ip route 10.37.121.1/32 Ethernet3 name IE-ZSCALER
-ip route 10.39.77.1/32 Ethernet3 name IE-ZSCALER
-ip route 10.50.9.1/32 Ethernet3 name IE-ZSCALER
+ip route 10.37.121.1/32 172.20.20.21 name IE-ZSCALER-PRI
+ip route 10.39.77.1/32 172.20.20.21 name IE-ZSCALER-SEC
+ip route 10.50.9.1/32 172.20.20.21 name IE-ZSCALER-TER
 !
 ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
