--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -537,9 +537,9 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:511
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
-ip route 10.37.121.1/32 Ethernet3 name IE-ZSCALER
-ip route 10.39.77.1/32 Ethernet3 name IE-ZSCALER
-ip route 10.50.9.1/32 Ethernet3 name IE-ZSCALER
+ip route 10.37.121.1/32 172.31.0.1 name IE-ZSCALER-PRI
+ip route 10.39.77.1/32 172.31.0.1 name IE-ZSCALER-SEC
+ip route 10.50.9.1/32 172.31.0.1 name IE-ZSCALER-TER
 !
 ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
