--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -637,14 +637,14 @@ ip_nat:
         nat_type: pool
 static_routes:
 - destination_address_prefix: 10.37.121.1/32
-  name: IE-ZSCALER
-  interface: Ethernet3
+  name: IE-ZSCALER-PRI
+  gateway: 172.31.0.1
 - destination_address_prefix: 10.39.77.1/32
-  name: IE-ZSCALER
-  interface: Ethernet3
+  name: IE-ZSCALER-SEC
+  gateway: 172.31.0.1
 - destination_address_prefix: 10.50.9.1/32
-  name: IE-ZSCALER
-  interface: Ethernet3
+  name: IE-ZSCALER-TER
+  gateway: 172.31.0.1
 router_service_insertion:
   enabled: true
   connections:
