Adding test for l2leaf esi.

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-L2LEAF1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-L2LEAF1B.cfg
@@ -87,6 +87,14 @@ interface Port-Channel3
    switchport mode trunk
    switchport trunk group MLAG
 !
+interface Port-Channel5
+   description server03_ESI_L2LEAF_PortChanne1
+   no shutdown
+   switchport
+   switchport trunk allowed vlan 110-111,210-211
+   switchport mode trunk
+   mlag 5
+!
 interface Ethernet1
    description DC1-LEAF2A_Ethernet8
    no shutdown
@@ -110,6 +118,11 @@ interface Ethernet4
    no shutdown
    speed forced 40gfull
    channel-group 3 mode active
+!
+interface Ethernet5
+   description server03_ESI_L2LEAF_Eth2
+   no shutdown
+   channel-group 5 mode active
 !
 interface Management1
    description oob_management
